tests/baselines/reference/stringLiteralsWithSwitchStatements01.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralsWithSwitchStatements01.ts(7,10): error TS2322: Type '"bar"' is not assignable to type '"foo"'.


==== tests/cases/conformance/types/stringLiteral/stringLiteralsWithSwitchStatements01.ts (1 errors) ====
    let x: "foo";
    let y: "foo" | "bar"; 
    
    switch (x) {
        case "foo":
            break;
        case "bar":
             ~~~~~
!!! error TS2322: Type '"bar"' is not assignable to type '"foo"'.
            break;
        case y:
            y;
            break;
    }
    